--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -21,6 +21,14 @@
 	--Darker_Violet: hsl(260, 8%, 14%);
 }
 
-body * {
+body {
+	width: 100%;
+	height: 100vh;
+	overflow-y: scroll;
+}
+
+body *,
+body *::after,
+body *::before {
 	font-size: 1.8rem;
 }
