--- a/src/assets/styles/Navbar.module.css
+++ b/src/assets/styles/Navbar.module.css
@@ -55,6 +55,7 @@
 	margin: 0 auto;
 	padding: 20px;
 	background-color: var(--Dark_Violet);
+	border-radius: 10px;
 	transition: visibility 0.2s ease-in-out, opacity 0.2s ease-in-out;
 }
 
@@ -83,11 +84,10 @@
 
 .NavbarBreakLine {
 	width: 100%;
-	margin: 25px;
 	border: none;
 	border-top: 1px solid var(--Gray);
 }
 
 .NavbarButtons button {
-	margin-bottom: 20px;
+	margin-top: 20px;
 }
