--- a/src/assets/styles/Link.module.css
+++ b/src/assets/styles/Link.module.css
@@ -8,7 +8,7 @@
 	margin-bottom: 20px;
 	font-size: 1.6rem;
 	font-weight: bold;
-	color: #fffcff;
+	color: var(--white);
 	transition: transform 0.1s ease-in-out;
 }
 
