the shortener section is styled (with responsive styles)

--- a/src/assets/styles/Button.module.css
+++ b/src/assets/styles/Button.module.css
@@ -24,6 +24,12 @@
 	height: 50px;
 }
 
+.Button[type='squared--large'] {
+	color: var(--white);
+	background-color: var(--Cyan);
+	border-radius: 5px;
+}
+
 .Button[type='ghost'] {
 	background-color: transparent;
 	width: 100%;
