--- a/src/assets/styles/Button.module.css
+++ b/src/assets/styles/Button.module.css
@@ -20,14 +20,31 @@
 }
 
 .Button[type='rounded--large'] {
-	width: 200px;
-	height: 50px;
+	width: 100%;
+	max-width: 250px;
+	height: 100%;
+	max-height: 50px;
+	min-height: 50px;
 }
 
-.Button[type='squared--large'] {
+.Button[type*='squared'] {
 	color: var(--white);
 	background-color: var(--Cyan);
 	border-radius: 5px;
+}
+
+.Button[type='squared--small'] {
+	width: 100%;
+	height: 50px;
+	padding: 10px;
+}
+
+.Button[type='squared--large'] {
+	width: 100%;
+	max-width: 250px;
+	height: 100%;
+	max-height: 50px;
+	min-height: 50px;
 }
 
 .Button[type='ghost'] {
