--- a/src/assets/styles/Button.module.css
+++ b/src/assets/styles/Button.module.css
@@ -41,7 +41,7 @@
 
 .Button[type='squared--large'] {
 	width: 100%;
-	max-width: 250px;
+	/* max-width: 250px; */
 	height: 100%;
 	max-height: 50px;
 	min-height: 50px;
