--- a/src/assets/styles/LinkCard.module.css
+++ b/src/assets/styles/LinkCard.module.css
@@ -36,9 +36,39 @@
 	color: var(--Cyan);
 }
 
+.LinkCard button::before {
+	width: 100%;
+	height: 100%;
+	content: 'copied!';
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--Dark_Violet);
+	border-radius: 5px;
+	visibility: hidden;
+	opacity: 0;
+}
+
+.LinkCard button:active:before {
+	animation: fadeInOut 1s ease-in-out forwards;
+}
+
 /* animations */
 @keyframes fadeIn {
 	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes fadeInOut {
+	0%,
+	100% {
+		visibility: visible;
 		opacity: 1;
 	}
 }
