--- a/src/assets/styles/Button.module.css
+++ b/src/assets/styles/Button.module.css
@@ -8,6 +8,14 @@
 	transition: transform 0.2s ease-in-out;
 }
 
+.Button:disabled {
+	cursor: not-allowed;
+}
+
+.Button:disabled:hover {
+	transform: none;
+}
+
 .Button[type*='rounded'] {
 	/* all the buttons that have a "type" property which starts by "rounded" will take these styles */
 	color: var(--white);
